--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           npm install
           npm run build
+      - uses: actions/upload-artifact@main
   test:
     runs-on: ubuntu-latest
     strategy:
